# DR6-ACT-lite

./: .gitignore  README.md  dr6-cmbonly-tests.yml  eval_act.yaml  likelihood_act_cmbonly.yaml  priors_cosmology.yaml  pyproject.toml  requirements.txt  run_act.yaml  run_act_planck.yaml  run_act_planck_lensing.yaml  setup.py  test.py  test_act.py  theory_camb.yaml  tox.ini
.github/workflows/: codestyle.yml  testing.yml
PlanckCut/: PlanckActCut.py  __init__.py
act_dr6_cmbonly/: PlanckActCut.py  PlanckActCut.yaml  PlanckNPIPEActCut.py  PlanckNPIPEActCut.yaml  __init__.py  act_dr6_cmb.yaml  act_dr6_cmbonly.py  act_dr6_jaxlike.py
act_dr6_cmbonly/tests/: test_act.py  test_jax.py
examples/: hmc.py  run_hmc.py
tests/: test_act.py
yamls/: act-lcdm.yaml  likelihood_act_cmbonly.yaml  likelihood_planck.yaml  p-act-lb-lcdm.yaml  p-act-lcdm.yaml  w-act-lcdm.yaml
yamls/likelihoods/: act_lite.yaml  lensing_desi.yaml  p_act_lite.yaml  wmap.yaml
